# statusline

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  statusline.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml
src/: config.rs  git.rs  main.rs  model.rs  render.rs  theme.rs
src/input/: adaptive.rs  mod.rs
